--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 asgiref==3.8.1
-Django==4.1.11
+Django==4.2.11
 django-ckeditor-5==0.2.12
-django-environ==0.11.2
 django-js-asset==2.2.0
 gunicorn==21.2.0
-mysqlclient==2.2.4
 packaging==24.0
 pillow==10.3.0
+psycopg2-binary==2.9.9
 sqlparse==0.4.4
 typing_extensions==4.11.0
 whitenoise==6.6.0
